--- a/covid19-tracker/src/app/app.component.html
+++ b/covid19-tracker/src/app/app.component.html
@@ -1,11 +1,15 @@
-<h2>Hello</h2>
-<button type="submit" (click)="getData()">click</button>
+<!-- <h2>Hello</h2>
+<button class="btn btn-primary" type="submit" (click)="getData()">click</button> -->
 
-<div *ngIf="shown">
+<!-- <div *ngIf="shown">
 
     <h2>Total Confirmed : {{totalConfirmed}}</h2>
     <h2>Total Active cases : {{activeCases}}</h2>
     <h2>Total Recovered : {{totalRecovered}}</h2>
     <h2>Total Deaths : {{totalDeaths}}</h2>
 
-</div>
+</div> -->
+
+<!-- <app-dashboard></app-dashboard> -->
+
+<router-outlet></router-outlet>
