--- a/covid19-tracker-actual/src/app/home/home.component.css
+++ b/covid19-tracker-actual/src/app/home/home.component.css
@@ -17,15 +17,17 @@
 }
 
 .container {        
-    height: 50%;
+    /* box-sizing: border-box !important; */
+    height: 45%;
     width: 80%;
-    padding-left: 25% !important;    
+    padding-left: 25% !important; 
+      
 }
   
 .card {
-    display: flex;
-    height: 280px;
-    width: 200px;
+    position: relative;
+    height: 100%;
+    width: 100%;
     background-color: #17141d;
     border-radius: 10px;
     box-shadow: -1rem 0 3rem #000;
@@ -63,7 +65,7 @@
     top: 100px;
     left: 20px;
     height: 5px;
-    width: 150px;
+    width: 10%;
 }
   
 .emptybar {
@@ -79,13 +81,38 @@
 
 .card-confirmed:hover .case1, .card-active:hover .case2, .card-recovered:hover .case3, .card-death:hover .case4 {
     display: block;
+    float: left;
 }
-  
+
+.card-confirmed:hover .delta1, .card-active:hover .delta2, .card-recovered:hover .delta3, .card-death:hover .delta4 {
+    display: block;
+}
+
+.delta1 {
+    color: blue;
+    display: none;
+}
+ 
+.delta2 {
+    color: yellow;
+    display: none;
+}
+
+.delta3 {
+    color: green;
+    display: none;
+}
+
+.delta4 {
+    color: red;
+    display: none;
+}
+
 .card-confirmed .filledbar {
     position: absolute;
     top: 0px;
-    z-index: 4;
-    width: 0px;
+    z-index: 3;
+    width: 100%;
     height: 100%;
     background: blue;
     transition: 3s ease-out;
@@ -95,7 +122,7 @@
     position: absolute;
     top: 0px;
     z-index: 3;
-    width: 0px;
+    width: 100%;
     height: 100%;
     background: yellow;
     transition: 3s ease-out;
@@ -105,7 +132,7 @@
     position: absolute;
     top: 0px;
     z-index: 3;
-    width: 0px;
+    width: 100%;
     height: 100%;
     background: green;
     transition: 3s ease-out;
@@ -115,14 +142,14 @@
     position: absolute;
     top: 0px;
     z-index: 3;
-    width: 0px;
+    width: 100%;
     height: 100%;
     background: red;
     transition: 3s ease-out;
 }
   
 .card:hover .filledbar {
-    width: 150px;
+    width: 500%;
     transition: 0.4s ease-out;
 }
   
@@ -213,12 +240,13 @@ svg {
   #pieChart {
     height: 100% !important;
     width: 100% !important ;
+    color: white !important;
     /* margin-top: 29%; */
   }
 
   .inbox-widget{
-    
+    /* box-sizing: border-box ; */
+    margin-top : 30px;
     height: 40%;
-    width: 20%;
-    margin-left: 40%;
+    width: 100%;    
   }
