--- a/covid19-tracker-actual/src/app/home/home.component.html
+++ b/covid19-tracker-actual/src/app/home/home.component.html
@@ -4,38 +4,44 @@
     <app-navbar></app-navbar>
     <h2 class="header" style="color: white;">India</h2>
 
-
+    <h5 style="color: white; margin-top: 15px;">Updated Date : {{date}} </h5>
     <div class="inner-section container-fluid">
 
-        <div class="inbox-widget row">
-            <div id="pieChart" style="width: 100%; height: 400px"></div>
-        </div>
+        
 
-               
+        
         <div class="row container">
             
-            <div class="card card-confirmed col">                
-                <h3 class="title">Total Cases</h3>                
-                <div class="bar">
+            
+            <div class="card card-confirmed col">      
+                
+                <h5 class="title"> <p class="delta1">{{deltaConfirmed}} &uarr; </p>  Total Cases</h5>   
+                
+                <div class="bar">  
+                                      
                     <div class="emptybar"></div>
                     <div class="filledbar"></div>   
-                    <h1 class="case1">{{totalConfirmed}}</h1>
+                    <h3 class="case1">{{totalConfirmed}}</h3>
+                    
                 </div>
+                
                 <div class="circle">                    
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
                         <circle class="stroke" cx="60" cy="60" r="50"/>                        
                     </svg>
                 </div>                
+                
             </div>
             <!-- <div class="bg"></div> -->
             
 
             <div class="card card-active col">
-                <h3 class="title">Active Cases</h3>
+                
+                <h5 class="title"> <p class="delta2">{{deltaActive}} &uarr;</p>  Active Cases</h5>
                 <div class="bar">
                     <div class="emptybar"></div>
                     <div class="filledbar"></div>
-                    <h1 class="case2">{{activeCases}}</h1>
+                    <h3 class="case2">{{activeCases}}</h3>
                 </div>
                 <div class="circle">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -46,26 +52,30 @@
             <!-- <div class="bg"></div> -->
 
             <div class="card card-recovered col">
-                <h3 class="title">Recovered Cases</h3>
+                
+                <h5 class="title"> <p class="delta3">{{deltaRecovered}} &uarr;</p>  Recovered Cases</h5>
                 <div class="bar">
                     <div class="emptybar"></div>
                     <div class="filledbar"></div>
-                    <h1 class="case3">{{totalRecovered}}</h1>
+                    <h3 class="case3">{{totalRecovered}}</h3>
                 </div>
                 <div class="circle">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
                         <circle class="stroke" cx="60" cy="60" r="50"/>
                     </svg>
                 </div>
+                
             </div>
+                      
             <!-- <div class="bg"></div> -->
 
             <div class="card card-death col">
-                <h3 class="title">Total Deaths</h3>
+                
+                <h5 class="title"> <p class="delta4">{{deltaDeaths}} &uarr;</p>  Total Deaths</h5>
                 <div class="bar">
                     <div class="emptybar"></div>
                     <div class="filledbar"></div>
-                    <h1 class="case4">{{totalDeaths}}</h1>
+                    <h3 class="case4">{{totalDeaths}}</h3>
                 </div>
                 <div class="circle">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -75,6 +85,10 @@
             </div>
             <!-- <div class="bg"></div> -->
 
+        </div>
+
+        <div class="inbox-widget row chart">
+            <div id="pieChart" style="width: 100%; height: 400px"></div>
         </div>
         
         
