--- a/covid19-tracker-actual/src/styles.css
+++ b/covid19-tracker-actual/src/styles.css
@@ -62,3 +62,9 @@ body{
     border-left: 6px solid transparent !important;
     border-right: 6px solid transparent !important;
   }
+
+
+  polyline g {
+    /* fill-opacity: 2; */
+    stroke: white;
+  }
