--- a/covid19-tracker-actual/src/app/states/states.component.html
+++ b/covid19-tracker-actual/src/app/states/states.component.html
@@ -1,4 +1,5 @@
-<div class="bodyPage">  
+<!-- <body>
+    <div class="bodyPage">  
 
         <app-navbar></app-navbar>
         <h2 class="header" style="color: white;">Covid-19-Tracker State-section</h2>        
@@ -28,7 +29,6 @@
                         </svg>
                     </div>                
                 </div>
-                <!-- <div class="bg"></div> -->
 
                 <div class="card card-active col">
                     <h5 class="title"> <p class="delta2">{{deltaActive}} &uarr;</p>  Active Cases</h5>
@@ -43,7 +43,6 @@
                         </svg>
                     </div>
                 </div>
-                <!-- <div class="bg"></div> -->
 
                 <div class="card card-recovered col">
                     <h5 class="title"> <p class="delta3">{{deltaRecovered}} &uarr;</p>  Recovered Cases</h5>
@@ -58,7 +57,6 @@
                         </svg>
                     </div>
                 </div>
-                <!-- <div class="bg"></div> -->
 
                 <div class="card card-death col">
                     <h5 class="title"> <p class="delta4">{{deltaDeaths}} &uarr;</p>  Total Deaths</h5>
@@ -73,7 +71,6 @@
                         </svg>
                     </div>
                 </div>
-                <!-- <div class="bg"></div>                 -->
 
             </div>   
             
@@ -84,3 +81,101 @@
         </div>
         
 </div>
+
+</body> -->
+
+
+<body>
+    <div class="bodyPage">    
+
+    
+
+        <app-navbar></app-navbar>
+        <h2 class="header" style="color: white;">Covid-19-Tracker State-section</h2>                
+        <h5 style="color: white; margin-top: 15px;" class="date" >Updated Date : {{date}} </h5>
+        <div class="stateDropdown">        
+            <ng-multiselect-dropdown [placeholder]="'Select State'" (onSelect)="onItemSelect($event)" (onDeSelect)="onItemDeSelect()" [data]="statesArray" [settings]="dropdownSettings" ></ng-multiselect-dropdown>
+        </div>
+        
+        <div class="inner-section container-fluid" [class.d-none]="!shownChart">
+    
+            <div class="row container">
+                            
+                <div class="card card-confirmed col-xs-4  col-sm-3 ">      
+                    
+                    <h5 class="title"> <p class="delta1">{{deltaConfirmed}} &uarr; </p>  Total Cases</h5>   
+                    
+                    <div class="bar">  
+                                          
+                        <div class="emptybar"></div>
+                        <div class="filledbar"></div>   
+                        <h3 class="case1">{{totalConfirmed}}</h3>
+                        
+                    </div>
+                    
+                    <div class="circle">                    
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="stroke" cx="60" cy="60" r="50"/>                        
+                        </svg>
+                    </div>                
+                    
+                </div>
+    
+                <div class="card card-active col-xs-4  col-sm-3 ">
+                    
+                    <h5 class="title"> <p class="delta2">{{deltaActive}} &uarr;</p>  Active Cases</h5>
+                    <div class="bar">
+                        <div class="emptybar"></div>
+                        <div class="filledbar"></div>
+                        <h3 class="case2">{{activeCases}}</h3>
+                    </div>
+                    <div class="circle">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="stroke" cx="60" cy="60" r="50"/>
+                        </svg>
+                    </div>
+                </div>
+
+    
+                <div class="card card-recovered col-xs-4  col-sm-3 ">
+                    
+                    <h5 class="title"> <p class="delta3">{{deltaRecovered}} &uarr;</p>  Recovered Cases</h5>
+                    <div class="bar">
+                        <div class="emptybar"></div>
+                        <div class="filledbar"></div>
+                        <h3 class="case3">{{totalRecovered}}</h3>
+                    </div>
+                    <div class="circle">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="stroke" cx="60" cy="60" r="50"/>
+                        </svg>
+                    </div>
+                    
+                </div>
+                          
+    
+                <div class="card card-death col-xs-4  col-sm-3 ">
+                    
+                    <h5 class="title"> <p class="delta4">{{deltaDeaths}} &uarr;</p>  Total Deaths</h5>
+                    <div class="bar">
+                        <div class="emptybar"></div>
+                        <div class="filledbar"></div>
+                        <h3 class="case4">{{totalDeaths}}</h3>
+                    </div>
+                    <div class="circle">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="stroke" cx="60" cy="60" r="50"/>
+                        </svg>
+                    </div>
+                </div>
+    
+            </div>
+    
+            <div class="inbox-widget row">
+                <div id="pieChart" style="width: 100%; height: 400px"></div>
+            </div>
+            
+        </div>
+    
+    </div>
+</body>
