--- a/covid19-tracker-actual/src/styles.css
+++ b/covid19-tracker-actual/src/styles.css
@@ -1,8 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-    /* background-color: green !important; */
+/* body{
     background-image: linear-gradient(-90deg, #3B716C, #304255 );
-}
+} */
 
 
 .stateDropdown .multiselect-dropdown .dropdown-btn {
@@ -65,6 +64,6 @@ body{
 
 
   polyline g {
-    /* fill-opacity: 2; */
     stroke: white;
   }
+
