--- a/covid19-tracker/src/app/states/states.component.css
+++ b/covid19-tracker/src/app/states/states.component.css
@@ -1,143 +1,328 @@
-.content{
-    background-color: #fff;
+body{
+  background-image: linear-gradient(-90deg, #3B716C, #304255 );
+}
+
+.bodyPage{    
+  height: 600px;   
+  width: 100%; 
+}
+
+.header {
+  margin: 20px;
+  display: block;
+}
+
+.date{
+  margin: 20px;
+  display: block;
+}
+
+.inner-section{    
+  background-color: #0D0027;
+  height: 100%;
+  width: 80%;
+  margin-top: 5%;
+  margin-left: 10%;
+  border: 1px solid #0D0027;
+  border-radius: 20px;
+  display: block;
+}
+
+.container {            
+  height: 280px;
+  width: 700px;
+  margin-left: 20%;
+}
+
+.card {
+  background-color: #17141d;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #000;
+  transition: 0.4s ease-out;
+  left: 0px;
+  z-index: 2;    
+}
+
+.card:not(:first-child) {
+    margin-left: -50px;
+}
+
+.card:hover {   
+  transform: translateY(-20px);
+  transition: 0.4s ease-out;
+}
+
+.card:hover ~ .card {
+  position: relative;
+  transition: 0.4s ease-out;
+}
+
+.title {
+  color: white;
+  font-weight: 300;
+  position: absolute;
+  left: 20px;
+  top: 15px;
+}
+
+.bar {
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  height: 5px;
+  width: 10%;
+}
+
+.emptybar {
+  background-color: #2e3033;
+  width: 100%;
+  height: 100%;
+}
+
+.case1, .case2, .case3, .case4{
+  color: white;
+  display: none;
+}
+
+.card-confirmed:hover .case1, .card-active:hover .case2, .card-recovered:hover .case3, .card-death:hover .case4 {
+  display: block;
+  float: left;
+}
+
+.card-confirmed:hover .delta1, .card-active:hover .delta2, .card-recovered:hover .delta3, .card-death:hover .delta4 {
+  display: block;
+}
+
+.delta1 {
+  color: blue;
+  display: none;
+}
+
+.delta2 {
+  color: yellow;
+  display: none;
+}
+
+.delta3 {
+  color: green;
+  display: none;
+}
+
+.delta4 {
+  color: red;
+  display: none;
+}
+
+.card-confirmed .filledbar {
+  position: absolute;
+  top: 0px;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  background: blue;
+  transition: 3s ease-out;
+}
+
+.card-active .filledbar {
+  position: absolute;
+  top: 0px;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  background: yellow;
+  transition: 3s ease-out;
+}
+
+.card-recovered .filledbar {
+  position: absolute;
+  top: 0px;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  background: green;
+  transition: 3s ease-out;
+}
+
+.card-death .filledbar{    
+  position: absolute;
+  top: 0px;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  background: red;
+  transition: 3s ease-out;
+}
+
+.card:hover .filledbar {
+  width: 500%;
+  transition: 0.4s ease-out;
+}
+
+.circle {
+  position: absolute;
+  top: 150px;
+  left: calc(50% - 60px);
+}
+
+.card-confirmed .stroke {
+  stroke: blue;
+  stroke-dasharray: 360;
+  stroke-dashoffset: 360;
+  transition: 3s ease-out;
+}
+
+.card-active .stroke {
+  stroke: yellow;
+  stroke-dasharray: 360;
+  stroke-dashoffset: 360;
+  transition: 3s ease-out;
+}
+
+.card-recovered .stroke {
+  stroke: green;
+  stroke-dasharray: 360;
+  stroke-dashoffset: 360;
+  transition: 3s ease-out;
+}
+
+.card-death .stroke {
+  stroke: red;
+  stroke-dasharray: 360;
+  stroke-dashoffset: 360;
+  transition: 3s ease-out;
+}
+
+svg {
+  fill: #17141d;
+  stroke-width: 3px;
+}
+
+.card:hover .stroke {
+  stroke-dashoffset: 100;
+  transition: 0.3s ease-out;
+}
+
+.container .bg {
+  position: absolute;
+  z-index: 1;
+  opacity: 0;    
+  right: 70%;
+  top: 20%;
+  background-color: black;
+  transition: all 0.3s ease-out;
+  pointer-events: none;
+  width: 100px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 3%;
+}
+
+.container .card.card-confirmed:hover~.bg {
+  opacity: 1;
+  background: blue;
+  
+}
+
+.container .card.card-active:hover~.bg {
+  opacity: 1;
+  background: yellow;
+  transition: 0.1s ease-out;
+}
+
+.container .card.card-recovered:hover~.bg {
+  opacity: 1;
+  background: green;
+  transition: 0.1s ease-out;
+}
+
+.container .card.card-death:hover~.bg {
+  opacity: 1;
+  background: red;
+  transition: 0.1s ease-out;
+}
+
+#pieChart {
+  height: 100% !important;
+  width: 100% !important ;
+  color: white !important;
+}
+
+.inbox-widget{    
+  margin-top : 30px;
+  height: 240px;
+  width: 100%;    
+}
+
+@media screen and (max-width: 991px){ 
+
+  .bodyPage{
+      height: 700px;
   }
 
-  body {
-    background: #f2f4f8;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    height: 100vh;
-    font-family: "Open Sans";
-  }
-  
-  .education {
-    --bg-color: #ffd861;
-    --bg-color-light: #ffeeba;
-    --text-color-hover: #4C5656;
-    --box-shadow-color: rgba(255, 215, 97, 0.48);
-  }
-  
-  .credentialing {
-    --bg-color: #B8F9D3;
-    --bg-color-light: #e2fced;
-    --text-color-hover: #4C5656;
-    --box-shadow-color: rgba(184, 249, 211, 0.48);
-  }
-  
-  .wallet {
-    --bg-color: #CEB2FC;
-    --bg-color-light: #F0E7FF;
-    --text-color-hover: #fff;
-    --box-shadow-color: rgba(206, 178, 252, 0.48);
-  }
-  
-  .human-resources {
-    --bg-color: #DCE9FF;
-    --bg-color-light: #f1f7ff;
-    --text-color-hover: #4C5656;
-    --box-shadow-color: rgba(220, 233, 255, 0.48);
-  }
-  
-  .card {
-    width: 220px;
-    height: 321px;
-    /* background: #fff; */
-    background: #000;
-    border-top-right-radius: 10px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    box-shadow: 0 14px 26px rgba(0,0,0,0.04);
-    transition: all 0.3s ease-out;
-    text-decoration: none;
-  }
-  
-  .card:hover {
-    transform: translateY(-5px) scale(1.005) translateZ(0);
-    box-shadow: 0 24px 36px rgba(0, 0, 0, 0),
-      0 24px 46px var(--box-shadow-color);
-  }
-  
-  .card:hover .overlay {
-    transform: scale(4) translateZ(0);
-  }
-  
-  .card:hover .circle {
-    border-color: var(--bg-color-light);
-    background: var(--bg-color);
-  }
-  
-  .card:hover .circle:after {
-    background: var(--bg-color-light);
-  }
-  
-  .card:hover p {
-    color: var(--text-color-hover);
-  }
-  
-  .card:active {
-    transform: scale(1) translateZ(0);
-    box-shadow: 0 15px 24px rgba(0,0,0,0.11),
-      0 15px 24px var(--box-shadow-color);
-  }
-  
-  .card p {
-    font-size: 17px;
-    color: #4C5656;
-    margin-top: 30px;
-    z-index: 1000;
-    transition: color 0.3s ease-out;
-  }
-  
-  .circle {
-    width: 131px;
-    height: 131px;
-    border-radius: 50%;
-    background: #fff;
-    border: 2px solid var(--bg-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 1;
-    transition: all 0.3s ease-out;
-  }
-  
-  .circle:after {
-    content: "";
-    width: 118px;
-    height: 118px;
-    display: block;
-    position: absolute;
-    background: var(--bg-color);
-    border-radius: 50%;
-    top: 7px;
-    left: 7px;
-    transition: opacity 0.3s ease-out;
-  }
-  
-  .circle svg {
-    z-index: 10000;
-    transform: translateZ(0);
-  }
-  
-  .overlay {
-    width: 118px;
-    position: absolute; 
-    height: 118px;
-    border-radius: 50%;
-    background: var(--bg-color);
-    top: 70px;
-    left: 50px;
-    z-index: 0;
-    transition: transform 0.3s ease-out;
+  .card{
+          box-sizing: border-box;
+          display: block;            
+          height: 280px ;            
   }
 
-  .cards-section{
-    margin-top: 30px;
+  .container {                
+      height: 300px;
+      width: 600px; 
+      margin-bottom: 100px;
+  }
+}
+
+@media only screen and (max-width: 827px) and (min-width: 766px){
+  .bodyPage{
+      width: 827px;
+  }
+}
+
+@media screen and (max-width: 726px){
+    .bodyPage{
+        height: 700px;
+    }
+
+    .card{
+      box-sizing: border-box;
+      display: block;            
+      height: 280px ;
+      width: 150px;
+       
+  }
+
+  .container {                
+      height: 300px;
+      width: 800px; 
+  }
+}
+
+@media screen and (max-width: 602px){
+    .bodyPage{
+        height: 1600px;
+    }
+
+    .container{
+        display: block;
+        height: 1100px;
+        width: 800px;
+    }
+
+    .card{
+      height: 280px ;
+      width: 150px;
+    }
+
+    .card:not(:first-child) {
+      margin-left: 0;
+    }
+    
+    .inbox-widget{    
+      margin-top : 30px;
+      height: 240px;
+      width: 100%;    
+      margin-left: 10px;
+      margin-bottom: 20px;
+    }
+    
 }
