--- a/covid19-tracker/src/styles.css
+++ b/covid19-tracker/src/styles.css
@@ -1,1 +1,69 @@
 /* You can add global styles to this file, and also import other style files */
+/* body{
+    background-image: linear-gradient(-90deg, #3B716C, #304255 );
+} */
+
+
+.stateDropdown .multiselect-dropdown .dropdown-btn {
+    margin-top: 20px;
+    width: 200px !important; 
+    border: none !important;
+    border-radius: none !important;
+    color: white;
+    padding-bottom: 10px !important;
+    border-bottom: 1px solid white !important;
+    border-radius: 0px !important;
+  }
+  
+  
+  .stateDropdown .multiselect-dropdown .dropdown-list{
+    width: 200px !important;
+  }
+  
+  
+  .stateDropdown a{
+    display: none;
+    position: absolute !important;
+  }
+  
+  .stateDropdown .multiselect-dropdown .dropdown-btn .selected-item{
+    color: black !important;
+    background-color: #f5f5f5 !important;
+    border: none !important;
+  }
+  
+  .stateDropdown .multiselect-dropdown .dropdown-btn .selected-item:hover{
+    box-shadow: none !important;
+  }
+  
+  
+  .stateDropdown .multiselect-item-checkbox :before {
+    display: none !important;
+  
+  }
+  .stateDropdown .multiselect-item-checkbox :after {
+    display: none !important; 
+  }
+  
+  .stateDropdown .multiselect-item-checkbox div{
+    padding-left: 0px !important;
+    
+  }
+  
+  .stateDropdown .multiselect-dropdown .dropdown-btn .dropdown-down{
+    border-top: 8px solid #adadad !important;
+    border-left: 6px solid transparent !important;
+    border-right: 6px solid transparent !important;
+  }
+  
+  .stateDropdown .multiselect-dropdown .dropdown-btn .dropdown-up{
+    border-bottom: 8px solid #adadad !important;
+    border-left: 6px solid transparent !important;
+    border-right: 6px solid transparent !important;
+  }
+
+
+  polyline g {
+    stroke: white;
+  }
+
